recursion.lessons.recursion.dragoncurve.DragonCurve2.scala.error
DragonCurve2:2: error: not found: value red
	setCouleur(red);
                   ^DragonCurve2:15: error: not found: value blue
	setCouleur(blue);
                   ^